💄 🐛 Fix layoutshift on Lobbies page Back button shifted when creating first lobby

--- a/styles/Lobbies.module.css
+++ b/styles/Lobbies.module.css
@@ -17,6 +17,7 @@
   display: grid;
   grid-auto-flow: column;
   column-gap: 3em;
+  min-width: 800px;
 }
 
 .list {
